<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="55dp"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dp"
			android:text="@string/readcode_mode"
			android:textSize="20sp" />

		<View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_alignParentBottom="true"
			android:background="#c21dffd9" />
	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="10dp"
		android:orientation="vertical">

		<RadioGroup
			android:id="@+id/radioGroupReadcode"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<RadioButton
				android:id="@+id/radioRelease"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="@string/press_reading" />

          <!--
			<RadioButton
				android:id="@+id/radioReleaseLight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/press_enable_light" /> -->

			<RadioButton
				android:id="@+id/radioContinuous"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/continuous_reading" />

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="35dp"
				android:layout_marginRight="5dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/scanning_interval" />

				<EditText
					android:id="@+id/edit_scanning_interval"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/et_bg_selector"
					android:hint="100"
					android:text="100"
					android:inputType="number"
					android:maxLength = "4"
					android:singleLine="true"
					android:textCursorDrawable="@null" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="30dp"
				android:layout_marginRight="5dp">
				<CheckBox
					android:id="@+id/radioContinuousNotimeout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:scaleX="0.8"
					android:scaleY="0.8"
					android:text="@string/continuous_notimeout" />
			</LinearLayout>
		</RadioGroup>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="5dp"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/reading_timeout" />

			<EditText
				android:id="@+id/edit_reading_timeout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/et_bg_selector"
				android:hint="5"
				android:text="5"
				android:inputType="number"
				android:maxLength = "3"
				android:singleLine="true"
				android:textCursorDrawable="@null" />
		</LinearLayout>
	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_alignParentBottom="true"
		android:background="#c2a2a6a5" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/rel_bg"
			android:textSize="24sp"
			android:text="@string/cancel" />

		<View
			android:layout_width="1dp"
			android:layout_height="fill_parent"
			android:background="#c2a2a6a5" />

		<Button
			android:id="@+id/btn_sure"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/rel_bg"
			android:textSize="24sp"
			android:text="@string/ok" />
	</LinearLayout>
</LinearLayout>
